// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages/Swap/useGetSwapInfo/formatToSwap > formats trade to swap correctly when direction is "exactAmountIn" 1`] = `
{
  "direction": "exactAmountIn",
  "exchangeRate": "1",
  "expectedToTokenAmountReceivedMantissa": "10000000000000000000",
  "fromToken": {
    "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
    "asset": "/src/packages/tokens/img/busd.svg",
    "decimals": 18,
    "symbol": "BUSD",
  },
  "fromTokenAmountSoldMantissa": "10000000000000000000",
  "minimumToTokenAmountReceivedMantissa": "9000000000000000000",
  "priceImpactPercentage": 0.001,
  "routePath": [
    "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
    "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
  ],
  "toToken": {
    "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
    "asset": "/src/packages/tokens/img/xvs.svg",
    "decimals": 18,
    "symbol": "XVS",
  },
}
`;

exports[`pages/Swap/useGetSwapInfo/formatToSwap > formats trade to swap correctly when direction is "exactAmountOut" 1`] = `
{
  "direction": "exactAmountOut",
  "exchangeRate": "1",
  "expectedFromTokenAmountSoldMantissa": "10000000000000000000",
  "fromToken": {
    "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
    "asset": "/src/packages/tokens/img/busd.svg",
    "decimals": 18,
    "symbol": "BUSD",
  },
  "maximumFromTokenAmountSoldMantissa": "11000000000000000000",
  "priceImpactPercentage": 0.001,
  "routePath": [
    "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
    "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
  ],
  "toToken": {
    "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
    "asset": "/src/packages/tokens/img/xvs.svg",
    "decimals": 18,
    "symbol": "XVS",
  },
  "toTokenAmountReceivedMantissa": "10000000000000000000",
}
`;
